# murack-core

./: .env.example  Cargo.toml
app/: Cargo.toml
app/src/: app_artwork_repository.rs  app_components.rs  audio_metadata.rs  config.rs  data_file.rs  db_common.rs  db_track_error.rs  error.rs  lib.rs  track_data.rs  track_sync.rs
app/src/app_artwork_repository/: artwork_cache.rs  track_artwork.rs
app/src/audio_metadata/: audio_metadata_model.rs  file_io.rs  file_mid_metadata.rs  format_type.rs
app/src/audio_metadata/formats/: flac.rs  m4a.rs  mp3.rs
app/src/command/: add.rs  aw_get.rs  cmd_move.rs  help.rs  mod.rs  playlist.rs  remove.rs  replace.rs
app/src/command/check/: args.rs  command_check.rs  messages.rs  mod.rs  resolve_dap.rs  resolve_data_match.rs  resolve_existance.rs  resolve_existance_result.rs  song_item_conflict.rs  track_item_conflict.rs
app/src/command/cmd_move/: move_usecase.rs
app/src/command/playlist/: command_playlist_model.rs  dap_playlist_repository.rs  file_name.rs
app/src/cui/: buf_cui.rs  cui_trait.rs  macros.rs  mod.rs  std_cui.rs
app/src/data_file/: copy.rs  delete.rs  library_fs_error.rs  mod_move.rs  search.rs  track_sync.rs  utils.rs
app/src/db_common/: tests.rs
app/src/track_data/: audio_metadata.rs  db_io.rs  db_track_entity.rs  file_io.rs  file_mid_metadata.rs
app/src/track_data/db_io/: tests.rs
app/src/track_data/formats/: flac.rs  m4a.rs  mp3.rs
app/src/track_sync/: db_track_sync.rs  track_sync_model.rs  track_sync_repository.rs  track_sync_row.rs
data_db/: Cargo.toml
data_db/src/: db_components.rs  error.rs  initialize.rs  lib.rs  like_esc.rs  sql_func.rs
data_db/src/artwork/: artwork_cache.rs  artwork_dao.rs  artwork_image_dao.rs  artwork_image_row.rs  db_artwork_repos_impl.rs  mod.rs  song_artwork_dao.rs
data_db/src/converts/: db_date.rs  db_filter_target.rs  db_filter_value_range.rs  db_folder_id_may_root.rs  db_lib_dir_path.rs  db_lib_song_path.rs  db_option_string.rs  db_playlist_type.rs  db_sort_type.rs  enums.rs  mod.rs
data_db/src/filter/: db_filter_repos_impl.rs  filter_dao.rs  filter_row.rs  mod.rs
data_db/src/folder/: db_folder_repos_impl.rs  folder_path_dao.rs  folder_path_row.rs  mod.rs
data_db/src/playlist/: db_playlist_repos_impl.rs  db_playlist_song_repos_impl.rs  db_playlist_track_repos_impl.rs  mod.rs  playlist_dao.rs  playlist_error.rs  playlist_row.rs  playlist_song_dao.rs  playlist_sqls.rs
data_db/src/song/: db_song_repos_impl.rs  db_song_sync_repos_impl.rs  mod.rs  song_dao.rs  song_entry.rs  song_row.rs  song_sqls.rs  song_sync_dao.rs  song_sync_entry.rs  song_sync_row.rs
data_db/src/song_lister/: mod.rs  song_finder.rs
data_db/src/tag/: db_song_tag_repos_impl.rs  db_track_tag_repos_impl.rs  mod.rs  song_tags_dao.rs
data_db/src/track/: db_track_repos_impl.rs  db_track_sync_repos_impl.rs  mod.rs  track_row.rs  track_sqls.rs  track_sync_row.rs
data_db/src/track_lister/: mod.rs  track_finder.rs
data_file/: Cargo.toml
data_file/src/: copy.rs  dap_repos_impl.rs  delete.rs  error.rs  file_lib_repos_impl.rs  lib.rs  mod_move.rs  search.rs  song_sync.rs  track_sync.rs  utils.rs
domain/: Cargo.toml
domain/src/: audio_metadata.rs  db.rs  db_components.rs  db_utils.rs  error.rs  file_lib_repos.rs  filter.rs  lib.rs  non_empty_string.rs  sort_type.rs  test_utils.rs  track_query.rs
domain/src/artwork/: artwork_error.rs  artwork_hash.rs  artwork_image_row.rs  artwork_repository.rs  db_artwork_repos.rs  db_artwork_repos_impl.rs  mini_image.rs  mod.rs  picture.rs  song_artwork.rs  track_artwork.rs
domain/src/audio_metadata/: audio_metadata_error.rs  audio_metadata_model.rs  format_type.rs
domain/src/check/: check_issue_summary.rs  mod.rs  usecase.rs
domain/src/dap/: dap_playlist_observer.rs  dap_playlist_usecase.rs  dap_repository.rs  mod.rs  song_finder.rs  track_finder.rs
domain/src/db_wrapper/: connection.rs  factory.rs  mod.rs  transaction.rs
domain/src/filter/: db_filter_repos.rs  enums.rs  filter_target.rs  mod.rs  model.rs  range_artwork.rs  range_bool.rs  range_date.rs  range_group.rs  range_int.rs  range_string.rs  range_tags.rs  tests.rs
domain/src/folder/: db_folder_repos.rs  db_folder_repos_impl.rs  folder_id.rs  folder_path_error.rs  folder_repository.rs  mod.rs  usecase.rs
domain/src/path/: lib_dir_path.rs  lib_path_str.rs  lib_song_path.rs  lib_track_path.rs  library_directry_path.rs  library_track_path.rs  mod.rs  path_error.rs  relative_song_path.rs  relative_track_path.rs
domain/src/playlist/: db_playlist_repos.rs  db_playlist_repos_impl.rs  db_playlist_song_repos.rs  db_playlist_track_repos.rs  db_playlist_track_repos_impl.rs  mod.rs  model.rs  playlist_error.rs  playlist_model.rs  playlist_repository.rs  playlist_row.rs  playlist_sqls.rs  playlist_track_repository.rs  playlist_tracks_sqls.rs  playlist_tree.rs  playlist_type.rs  sort_type.rs
domain/src/song/: db_song_repos.rs  mod.rs  song_item_kind.rs  usecase.rs
domain/src/sort_type/: tests.rs  with_playlist.rs
domain/src/string_order_cnv/: cnv.rs  daku_cnv.rs  map_define.rs  mod.rs
domain/src/sync/: db_song_sync.rs  db_song_sync_repos.rs  db_track_sync.rs  db_track_sync_repos.rs  db_track_sync_repos_impl.rs  mod.rs  song_sync.rs  track_sync.rs  track_sync_repository.rs  usecase.rs
domain/src/sync/usecase/: tests.rs
domain/src/tag/: db_song_tag_repos.rs  db_track_tag_repos.rs  db_track_tag_repos_impl.rs  mod.rs  track_tag_repository.rs
domain/src/test_utils/: mocks.rs  mod.rs
domain/src/track/: db_track_repos.rs  db_track_repos_impl.rs  mod.rs  track_duration.rs  track_error.rs  track_repository.rs  track_sqls.rs  usecase.rs
domain/src/track_query/: esc.rs  filter.rs  filter_query.rs  playlist_query.rs  select_column.rs  track_finder_impl.rs  track_query_error.rs
infra/: Cargo.toml
infra/src/: app_args.rs  app_components_impl.rs  lib.rs  main.rs  registry.rs  run.rs
media/: Cargo.toml
media/src/: error.rs  lib.rs
media/src/audio_meta/: audio_metadata.rs  audio_picture.rs  format_type.rs  mod.rs
media/src/audio_metadata/: mod.rs
media/src/picture/: mod.rs  model.rs
(+96 files in other folders)
