[package]
name = "murack-core-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
mockall = "0.13.1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
toml = "0.9.0"

murack-core-domain = { path = "../domain" }
murack-core-media = { path = "../media" }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
test-case = "3.3.1"
