[package]
name = "murack-core-app"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
async-trait = "0.1.88"
chrono = { version = "0.4.19" }
mockall = "0.13.1"
murack-core-domain = { path = "../domain" }
once_cell = "1.21.3"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
thiserror = "2.0.12"
toml = "0.9.0"
trash = "5.2.2"

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
tempfile = "3.20.0"
test-case = "3.3.1"
