[package]
name = "walk_base_2_data_db"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
async-recursion = "1.1.1"
async-trait = "0.1.88"
chrono = "0.4.19"
derive-new = "0.7.0"
mockall = "0.13.1"
once_cell = "1.8.0"
paste = "1.0.5"
pretty_assertions = "1.4.1"
num-traits = "0.2.19"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
test-case = "3.3.1"
thiserror = "2.0.12"

domain = { path = "../domain", package = "walk_base_2_domain" }
media = { path = "../media", package = "walk_base_2_media" }
