[package]
name = "murack-core-data-db"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
async-trait = "0.1.88"
chrono = "0.4.19"
derive-new = "0.7.0"
mockall = "0.13.1"
once_cell = "1.8.0"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.12"

murack-core-domain = { path = "../domain", package = "murack-core-domain" }
murack-core-media = { path = "../media", package = "murack-core-media" }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
pretty_assertions = "1.4.1"
test-case = "3.3.1"
tokio = { version = "1.46", features = ["macros"] }
