[package]
name = "walk_base_2_data_file"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
thiserror = "1.0.26"
trash = "2.0.2"

domain = { path = "../domain", package = "walk_base_2_domain" }
media = { path = "../media", package = "walk_base_2_media" }
