[package]
name = "murack-core-data-file"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
thiserror = "2.0.12"
trash = "5.2.2"

murack-core-domain = { path = "../domain", package = "murack-core-domain" }
murack-core-media = { path = "../media", package = "murack-core-media" }
