[package]
name = "walk_base_2_domain"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
async-trait = "0.1.88"
chrono = { version = "0.4.19", features = ["serde"] }
derive-new = "0.7.0"
mockall = "0.13.1"
once_cell = "1.21.3"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.12"

media = { path = "../media", package = "walk_base_2_media" }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
test-case = "3.3.1"
tokio = { version = "1.46", features = ["macros"] }
