[package]
name = "murack-core-domain"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
async-recursion = "1.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
image = "0.25.6"
md5 = "0.8.0"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.12"

murack-core-media = { path = "../media", package = "murack-core-media" }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
test-case = "3.3.1"
tokio = { version = "1.46", features = ["macros"] }
