[package]
name = "murack-core-domain"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
openapi = ["utoipa"]

[dependencies]
async-recursion = "1.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
id3 = "1.16.3"
image = "0.25.6"
md5 = "0.8.0"
metaflac = "0.2.8"
mp3-duration = "0.1.10"
mp4ameta = "0.13.0"
once_cell = "1.21.3"
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "chrono"] }
thiserror = "2.0.12"
utoipa = { version = "5.4", optional = true }

[dev-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
test-case = "3.3.1"
tokio = { version = "1.46", features = ["macros"] }
