[package]
name = "walk_base_2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
tokio = { version = "1.46", features = ["full"] }
walk_base_2_domain = { path = "../domain" }
walk_base_2_app = { path = "../app" }
walk_base_2_data_db = { path = "../data_db" }
walk_base_2_data_file = { path = "../data_file" }

[dev-dependencies]
pretty_assertions = "1.4.1"
