[package]
name = "walk_base_2"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.46", features = ["full"] }
murack-core-domain = { path = "../domain" }
murack-core-app = { path = "../app" }
murack-core-data-db = { path = "../data_db" }
murack-core-data-file = { path = "../data_file" }

[dev-dependencies]
pretty_assertions = "1.4.1"
