[package]
name = "walk_base_2_media"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
id3 = "0.6.4"
image = "0.25.6"
md5 = "0.7.0"
metaflac = "0.2.0"
mp3-duration = "0.1.10"
mp4ameta = "0.11.0"
thiserror = "1.0.26"
