[package]
name = "walk_base_2_media"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.41"
id3 = "1.16.3"
image = "0.25.6"
md5 = "0.8.0"
metaflac = "0.2.8"
mp3-duration = "0.1.10"
mp4ameta = "0.13.0"
thiserror = "2.0.12"
